--- a/aulas/domotica_a5/src/assets/variables.scss
+++ b/aulas/domotica_a5/src/assets/variables.scss
@@ -1,8 +1,10 @@
  //Nomeado as variaveis do projeto
  :root{
     --background-dark-color: #511f6e;
-    --backgroud-light-color: #f6f1e6;
+    --backgroud-light-color: #d1c8b3;
+    --background-envs-color: #f6f1e6;
+    --background-device-color: #ececec;
+    --device-icon-color: rgb(87,82,82);
     --ar-desligado: #FF0000;
     --ar-ligado: #00FF00;
-
  }
